--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ _site/
 .jekyll-cache/
 .jekyll-metadata
 .env
+node_modules
 # Additional Ruby/bundler ignore for when you run: bundle install
 /vendor
 
