--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "author": "Jeevant",
   "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
+  "main": "index.js",  "scripts": {
     "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index",
+    "init-data": "node scripts/initSampleData.js"
+  },  "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
