--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,18 +13,21 @@
   "license": "ISC",
   "author": "Jeevant",
   "type": "commonjs",
-  "main": "index.js",  "scripts": {
+  "main": "index.js",
+  "scripts": {
     "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index",
-    "init-data": "node scripts/initSampleData.js"
-  },  "dependencies": {
+    "init-data": "node scripts/initSampleData.js",
+    "seed": "node seed.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
-    "passport": "^0.7.0",
-    "axios": "^1.6.2"
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
