--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "node seed && node index",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index",
     "init-data": "node scripts/initSampleData.js",
