--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -3,6 +3,7 @@
 
 # API Configuration
 VITE_API_BASE_URL=http://localhost:9000/api
+VITE_API_BASE_URL=https://back-wedding-ashy.vercel.app/api
 
 # Production API URL (update this when deploying)
 # VITE_API_BASE_URL=https://your-backend-url.vercel.app/api
